added database_utils.lsp (for-query-with-db function), improved activate-plugin, some other stuff, the dragonfly_sqlite3.html file is going to be renamed prior to 0.61

--- a/example-site/includes/css/screen.css
+++ b/example-site/includes/css/screen.css
@@ -512,13 +512,9 @@ pre.textmate-source {
 	font-family:Courier,monospace;
 	font-size:11px;
 	color:#ffffff;
-	
-	line-height: 1.5em;
-	word-wrap: break-word;
+	line-height: 15px;
 	white-space: pre;
-	white-space: pre-wrap;
-	white-space: -moz-pre-wrap;
-	white-space: -o-pre-wrap;
+	overflow: auto;
 }
 
 pre.textmate-source .linenum {
