replaced null->nil with generic cast-if

--- a/example-site/views/dragonfly_sqlite3.html
+++ b/example-site/views/dragonfly_sqlite3.html
@@ -39,19 +39,19 @@
 					</tr>
 				<% )) %>
 			</table>
-			<% (setf obj (find-dbobj db "people" '("name" "age") 1)) %>
+			<% (setf *obj* (find-dbobj db "people" '("name" "age") 1)) %>
 			<p>
-				I've found a person called <%=(obj:name)%> in the table '<%=obj:table%>' at location <%=obj:finder%>, this person is <%=(obj:age)%> years old.
+				I've found a person called <%=(*obj*:name)%> in the table '<%=*obj*:table%>' at location <%=*obj*:finder%>, this person is <%=(*obj*:age)%> years old.
 			</p>
 			<p>
-				Let's set their age to 10.<%(obj:age 10) (dbobj-save obj)%>
+				Let's set their age to 10.<%(*obj*:age 10) (dbobj-save *obj*)%>
 			</p>
 			<p>
-				They are now <%=(obj:age)%> years old.
+				They are now <%=(*obj*:age)%> years old.
 			</p>
 			<p>
 				Further, I can create a new person. See:
-				<% (release obj) (setf obj (create-dbobj db "people" '("Sue" 57))) %>
+				<% (release *obj*) (setf *obj* (create-dbobj db "people" '("Sue" 57))) %>
 			</p>
 			<p>
 			<table>
