improved api stuff through resources/api.lsp
--HG--
rename : example-site/dragonfly-api/DF.DB/database.lsp.html => example-site/dragonfly-api/db/database.lsp.html
rename : example-site/dragonfly-api/DF.DB/database_sqlite3.lsp.html => example-site/dragonfly-api/db/database_sqlite3.lsp.html
rename : example-site/dragonfly-api/DF.DB/index.html => example-site/dragonfly-api/db/index.html

--- a/example-site/views/dragonfly_ajax-api.html
+++ b/example-site/views/dragonfly_ajax-api.html
@@ -2,9 +2,8 @@
 (activate-plugin "dragonfly_api")
 
 (let (path ($POST "path"))
-	; security check! make sure they ain't asking
-	; for something they shouldn't be asking for!
-	(if (and (find "dragonfly-api" path) (not (find "../" path)) (ends-with path ".html"))
+	; security check! make sure they ain't asking for something they shouldn't be asking for!
+	(if (and (find "dragonfly-api" path) (not (find ".." path)) (ends-with path ".html"))
 		(include path)
 		(die "bad path: " path)
 	)
