--- a/example-site/views/dragonfly_api.html
+++ b/example-site/views/dragonfly_api.html
@@ -19,11 +19,16 @@
 	<div id="content">
 				
 		<div class="title nomargin">
-			<p><% (title "| Dragonfly web framework") %><p>
+			<p><% (title "| Dragonfly web framework") %> | <%=Resource.Api:api-path%><p>
 		</div>
 		
 		<!-- This inserts a div with id #api-browser -->
-		<% (api-browser "dragonfly-api") %>
+		<%
+		(if Resource.Api:api-path
+			(api-browser Resource.Api:api-path)
+			(api-browser "dragonfly-api")
+		)
+		%>
 		
 		<div class="line-dotted"></div>
 
