--- a/example-site/views/partials/navigation.html
+++ b/example-site/views/partials/navigation.html
@@ -32,9 +32,9 @@
 				<dd><% (link_to "Changes between versions" "changes")%>
 				
 				<dt>API Reference</dt>
-				<dd><% (link_to "Core API" "dragonfly_api") %></dd>
-				<dd><% (link_to "Dragonfly DB" "dragonfly_db_api") %></dd>
-				<dd><% (link_to "Dragonfly SMTP" "dragonfly_smtp_api") %></dd>
+				<dd><% (link_to "Core API" "api") %></dd>
+				<dd><% (link_to "Dragonfly DB" "api/db") %></dd>
+				<dd><% (link_to "Dragonfly SMTP" "api/smtp") %></dd>
 			</dl>
 		</div>
 	</li>
