--- a/example-site/views/dragonfly_builtin_plugins.html
+++ b/example-site/views/dragonfly_builtin_plugins.html
@@ -33,8 +33,11 @@
 			newLISP's various database modules as well.
 		</p>
 		<p>
+			DF.DB also comes with a very basic ORM layer called DB.OBJ.
+		</p>
+		<p>
 			You can find it in the <span class="code">plugins-inactive/db</span> folder. The API is
-			<%(link_to "available here" "dragonfly_db_api")%>.
+			<%(link_to "available here" "api/db")%>.
 		</p>
 		<h2>Dragonfly SMTP</h2>
 		<p>
