Fixed broken links and typos.

--- a/example-site/views/dragonfly_builtin_plugins.html
+++ b/example-site/views/dragonfly_builtin_plugins.html
@@ -51,7 +51,7 @@
 		</ul>
 		<p>
 			This plugin (like all optional plugins) is located in the <span class="code">plugins-inactive</span> folder.
-			The API is <%(link_to "available here" "dragonfly_smtp_api")%>.
+			The API is <%(link_to "available here" "api/smtp")%>.
 		</p>
 		<h2>Dragonfly's example-site functions</h2>
 		<p>
@@ -69,7 +69,7 @@
 		</ul>
 		<h2>Artful Code Modules</h2>
 		<p>
-			Dragonfly includes several of Jeff Ober's <a href="http://static.artfulcode.net/newlisp/">Artful Code modules</a>, including functions for:
+			Dragonfly includes several of Jeff Ober's <a href="https://github.com/kanendosei/artful-newlisp">Artful Code modules</a>, including functions for:
 		</p>
 		<ul>
 			<li>Session management</li>
@@ -79,12 +79,12 @@
 			<li>Encoding and decoding HTML entities</li>
 		</ul>
 		<p>
-			Have a look in the <span class="code">plugins-inactive/artfulcode</span> folder to see the included ones. Documentation for all of Jeff's modules can be found <a href="http://static.artfulcode.net/newlisp/">here</a>.
+			Have a look in the <span class="code">plugins-inactive/artfulcode</span> folder to see the included ones. Documentation for all of Jeff's modules can be found <a href="https://github.com/kanendosei/artful-newlisp">here</a>.
 		</p>
 		<h2>Misc</h2>
 		<p>Additional plugins include:</p>
 		<ul>
-			<li>nldb.lsp - a simple list-based database by <a href="http://unbalanced-parentheses.nfshost.com/">cormullion</a></li>
+			<li>nldb.lsp - a simple list-based database by <a href="https://newlisper.wordpress.com/">cormullion</a></li>
 		</ul>
 		<h2>More Plugins</h2>
 		<p>
