--- a/example-site/views/dragonfly_create_routes.html
+++ b/example-site/views/dragonfly_create_routes.html
@@ -23,7 +23,7 @@
 		</p>
 		<ol>
 			<li>Create a .lsp file in the <span class="code">plugins-active</span> directory</li>
-			<li>Make a <a href="http://www.newlisp.org/index.cgi?page=newLISP-FOOP">FOOP</a> subclass of the Route class implementing its methods</li>
+			<li>Make a <a href="http://www.newlisp.org/downloads/newlisp_manual.html#foop">FOOP</a> subclass of the Route class implementing its methods</li>
 			<li>Add an instance to the <span class="code">DF:dragonfly-routes</span> list</li>
 		</ol>
 		<p>
