--- a/example-site/views/dragonfly_plugins.html
+++ b/example-site/views/dragonfly_plugins.html
@@ -21,7 +21,7 @@
 		<p class="extract">You can extend and modify Dragonfly's behavior through the use of plugins.</p>
 
 		<p>
-			There are two types of plugins, those in the <b>plugins-active</b> folder, and those in the <b>plugins-inactive</b> folder. The ones in the former are loaded when <span class="code">listener</span> is called, prior to running the routes. Every .lsp file in the <b>plugins-active</b> folder is loaded at that point, so you'll only want your most frequently used files in there.
+			There are two types of plugins: those in the <b>plugins-active</b> folder, and those in the <b>plugins-inactive</b> folder. The ones in the former are loaded when <span class="code">listener</span> is called, prior to running the routes. Every .lsp file in the <b>plugins-active</b> folder is loaded at that point, so you'll only want your most frequently used files in there.
 			
 		</p>
 
