--- a/example-site/views/dragonfly_welcome.html
+++ b/example-site/views/dragonfly_welcome.html
@@ -19,13 +19,13 @@
 		
 		<h1>Getting Started</h1>
 		<p class="extract">
-			Setting up Dragonfly is easy, all you need is newLISP and a web server (like Apache).
+			Setting up Dragonfly is easy; all you need is newLISP and a web server (like Apache).
 			As newLISP compiles virtually everywhere, you can host a Dragonfly-based site just about anywhere,
 			even on shared web hosts!
 		</p>
 
 		<h2>At first one question</h2>
-		<p>Why is this guide so damn narrow? Because most people work on wide screens. So put the Dragonfly Guide on the left and open Your development window  in a new browser window on the right. This way the Dragonfly User Guide will always be visible.</p>
+		<p>Why is this guide so damn narrow? Because most people work on wide screens. So put the Dragonfly Guide on the left and open Your development window in a new browser window on the right. This way the Dragonfly User Guide will always be visible.</p>
 		
 		<h2>Requirements</h2>
 		<p>Dragonfly requires the following to work:</p>
