--- a/example-site/views/locating_self.html
+++ b/example-site/views/locating_self.html
@@ -29,7 +29,7 @@
 		</p>
 		<h3 class="param">DF_SELF</h3>
 		<p>
-			This symbol contains the absolute path (on the server) to the main file responsible for providing an response to the requested URL, for example:
+			This symbol contains the absolute path (on the server) to the main file responsible for providing a response to the requested URL, for example:
 		</p>
 		<p>
 			<span class="code">/home/www/rundragonfly.com/views/locating_self.html</span>
@@ -42,8 +42,8 @@
 		</p>
 		<h3 class="param">DF_PAGE</h3>
 		<p>
-			<span class="code">DF_PAGE</span> is useful when writing <%(link_to "templates" "dragonfly_templates")%>,
-			it tells us the full resource portion of the URL. For example, here's it current value:
+			<span class="code">DF_PAGE</span> is useful when writing <%(link_to "templates" "dragonfly_templates")%>.
+			It tells us the full resource portion of the URL. For example, here's it current value:
 		</p>
 		<p><span class="code"><%=DF_PAGE%></span></p>
 		
